# learn_opengl

./: .gitignore  CMakeLists.txt
cmake/: GLAD.cmake  GLFW.cmake  STB.cmake
resources/shaders/: shader.frag  shader.vert
src/: main.cpp
